Change styling to fix spacing and uneven cetering of flexbox.

--- a/src/components/VideoWall.css
+++ b/src/components/VideoWall.css
@@ -5,12 +5,12 @@
 }
 
 .videoDeck div{
-    width: 300px;
-    margin: 15px;
+    width: 320px;
+    margin: 5px;
 }
 
 .video-container{
-    margin: 15px;
+    
 }
 
 .description{
